# liqpay_rs

./: Cargo.toml  README.md
src/: client.rs  common.rs  lib.rs  p2p_credit.rs  p2p_debit.rs  tokens.rs  traits.rs
src/information/: add_data.rs  archive.rs  common.rs  mod.rs  receipt.rs  registry.rs  status.rs
src/informational/: add_data.rs  archive.rs  common.rs  receipt.rs  registry.rs  status.rs
src/internet_acquiring/: card.rs  cash.rs  common.rs  invoice.rs  mod.rs  qr_code.rs  refund.rs  subscription.rs  token.rs  two_stage.rs  two_step.rs
src/partner/: company_information.rs  create_company.rs  edit_company.rs  mod.rs  partner_information.rs
src/verification/: card_verification.rs  cvv.rs  mod.rs  mpi.rs  otp.rs  three_d_secure.rs
