[package]
name = "liqpay_rs"
version = "0.9.4"
description = "Unofficial LiqPay API Client for Rust."
documentation = "https://docs.rs/liqpay_rs"
edition = "2024"
keywords = ["unofficial", "liqpay", "api"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Strafe153/unofficial_liqpay_rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
blocking = ["reqwest/blocking"]

[dependencies]
base64 = "0.22.1"
iso3166 = "1.2.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha3 = "0.10.8"
